<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="103dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="12dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ADD HOSTEL"
                android:layout_gravity="center"
                android:fontFamily="@font/calligraffitti"
                android:textSize="26sp"
                android:gravity="center"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/inputHostelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/calligraffitti"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/full_name"
                android:drawableLeft="@drawable/full_name"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/hostelName"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

            <EditText
                android:id="@+id/inputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:fontFamily="@font/calligraffitti"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_email"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/addresss"
                android:inputType="text"
                android:padding="16dp" />

            <EditText
                android:id="@+id/inputNumberOfRooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_group"
                android:drawableLeft="@drawable/ic_lock"
                android:fontFamily="@font/calligraffitti"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/number_of_rooms"
                android:inputType="text"
                android:padding="16dp" />

            <EditText
                android:id="@+id/rentPerPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/calligraffitti"
                android:drawableStart="@drawable/ic_rent"
                android:drawableLeft="@drawable/ic_rent"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/rent_per_person"
                android:inputType="text"
                android:padding="16dp" />

            <EditText
                android:id="@+id/inputPeopleCapacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_capacity"
                android:drawableLeft="@drawable/ic_capacity"
                android:fontFamily="@font/calligraffitti"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/people_capacity"
                android:inputType="text"
                android:padding="16dp" />

            <EditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/calligraffitti"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_phone"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="text"
                android:padding="16dp" />

            <Spinner
                android:id="@+id/hostelType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:autofillHints="User Type:"
                android:background="@android:drawable/btn_dropdown"
                android:ellipsize="marquee"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/hostelBuildingType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:autofillHints="User Type:"
                android:background="@android:drawable/btn_dropdown"
                android:ellipsize="marquee"
                android:spinnerMode="dropdown" />

            <ImageView
                android:id="@+id/hostelPictureView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/round_border"
                tools:srcCompat="@drawable/ic_profile" />

            <Button
                android:id="@+id/btnaddHostel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/round_bg"
                android:text="@string/addHostel"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:paddingBottom="12dp"
                android:layout_gravity="center"
                android:fontFamily="@font/calligraffitti"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>